Bug 16152 - jamstudio driver completely broken
Summary: jamstudio driver completely broken
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/jamstudio (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-29 16:19 UTC by Julien Cristau
Modified: 2008-05-30 03:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
proposed patch (1.11 KB, patch)
2008-05-29 16:19 UTC, Julien Cristau
no flags Details | Splinter Review

Description Julien Cristau 2008-05-29 16:19:28 UTC
Created attachment 16812 [details] [review]
proposed patch

src/js_x.c has this:
#if XORG_VERSION_CURRENT >= XF86_VERSION_NUMERIC(3,9,0,0,0)
#define XFREE86_V4 1
#endif

and then all the code is hidden behind #ifdef XFREE86_V4, which isn't getting defined since xserver started reporting 1.x as XORG_VERSION_CURRENT.
We end up building an empty unusable driver.  The attached patch should fix that, but is obviously untested (besides checking that at least some code is being built).
Comment 1 Peter Hutterer 2008-05-30 03:30:09 UTC
Pushed as c0f13a2490f7fcb8a742affb15f1beeb0259d0f8. Ta.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.