Remove XFREE86_V4 ifdefs. #16152

Wasn't getting defined since the server started reporting 1.x as
XORG_VERSION_CURRENT, so no code was actually built.

Patch is untested.

Signed-off-by: Peter Hutterer <peter@cs.unisa.edu.au>

X.Org Bug 16152 <http://bugs.freedesktop.org/show_bug.cgi?id=16152>